--- a/assets/sass/components/_notificationbar.scss
+++ b/assets/sass/components/_notificationbar.scss
@@ -16,7 +16,6 @@
   }
   &.notification {
     padding: 6px 0;
-    min-height: 40px;
     border-radius: 0;
     margin-bottom: 0;
     .delete {
